--- a/web/.gitignore
+++ b/web/.gitignore
@@ -34,3 +34,9 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# pwa
+public/sw.js
+public/sw.js.map
+public/workbox-327c579b.js
+public/workbox-327c579b.js.map
