Replace workbox ignore regex

--- a/web/.gitignore
+++ b/web/.gitignore
@@ -38,5 +38,5 @@ next-env.d.ts
 # pwa
 public/sw.js
 public/sw.js.map
-public/workbox-327c579b.js
-public/workbox-327c579b.js.map
+public/workbox-*.js
+public/workbox-*.js.map
