--- a/web/package.json
+++ b/web/package.json
@@ -9,7 +9,8 @@
     "next": "^13",
     "next-pwa": "^5.6.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-google-charts": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.3",
