--- a/web/package.json
+++ b/web/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "cypress": "cypress open"
   },
   "dependencies": {
     "next": "^13",
@@ -17,6 +18,7 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "autoprefixer": "^10.4.12",
+    "cypress": "^10.11.0",
     "eslint": "^8.26.0",
     "eslint-config-next": "^13.0.1",
     "postcss": "^8.4.18",
