--- a/web/package.json
+++ b/web/package.json
@@ -11,7 +11,7 @@
     "next-pwa": "^5.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-google-charts": "^4.0.0"
+    "react-minimal-pie-chart": "^8.4.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.3",
