--- a/backend/.env
+++ b/backend/.env
@@ -3,5 +3,8 @@
 
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+POSTGRES_USERNAME=postgres
+POSTGRES_PASSWORD=123
+POSTGRES_PORT=5432
+DATABASE_URL="postgresql://postgres:123@db:5432/postgres?schema=public"
 
-DATABASE_URL="postgresql://postgres:123@localhost:5434/postgres?schema=public"
