--- a/web/package.json
+++ b/web/package.json
@@ -7,6 +7,7 @@
     "cypress": "cypress open"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.16.1",
     "next": "^13",
     "next-pwa": "^5.6.0",
     "react": "^18.2.0",
