--- a/Caddyfile
+++ b/Caddyfile
@@ -1,4 +1,6 @@
 api.mobilesys.de {
+  header Access-Control-Allow-Methods "*"
+  header Access-Control-Allow-Origin "*"
   reverse_proxy backend:8080
 }
 
