--- a/Caddyfile
+++ b/Caddyfile
@@ -1,6 +1,7 @@
 api.mobilesys.de {
   header Access-Control-Allow-Methods "*"
   header Access-Control-Allow-Origin "*"
+  header Access-Control-Allow-Headers "*"
   reverse_proxy backend:8080
 }
 
