--- a/Caddyfile
+++ b/Caddyfile
@@ -2,6 +2,12 @@ api.mobilesys.de {
   header Access-Control-Allow-Methods "*"
   header Access-Control-Allow-Origin "*"
   header Access-Control-Allow-Headers "*"
+
+  @options {
+    method OPTIONS
+  }
+  respond @options 200
+
   reverse_proxy backend:8080
 }
 
