--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
     "next-pwa": "^5.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0",
     "react-minimal-pie-chart": "^8.4.0"
   },
   "devDependencies": {
