adding node modules

--- a/backend/.env
+++ b/backend/.env
@@ -3,8 +3,14 @@
 
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+
+
+# Usually this file will not be uploaded in git or docker. You have to write a script that pulls the data
+
 POSTGRES_USERNAME=postgres
 POSTGRES_PASSWORD=123
 POSTGRES_PORT=5432
 DATABASE_URL="postgresql://postgres:123@db:5432/postgres?schema=public"
 
+# local development
+# DATABASE_URL="postgresql://postgres:123@localhost:5432/postgres?schema=public"
