--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -40,8 +40,8 @@ services:
     ports:
       - '5555:80'
     environment:
-      PGADMIN_DEFAULT_EMAIL: pgadmin4@pgadmin.org
-      PGADMIN_DEFAULT_PASSWORD: admin
+      PGADMIN_DEFAULT_EMAIL: mobsysuser22@pgadmin.org
+      PGADMIN_DEFAULT_PASSWORD: GhtVjG4_0w_xQo+fHvo^47
     volumes:
       - pgadmin-data:/var/lib/pgadmin
     restart: unless-stopped
