--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -27,6 +27,19 @@ services:
     environment:
       DATABASE_URL: postgresql://postgres:123@db:5432/postgres?schema=public
     depends_on: [db]
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: pgadmin
+    depends_on:
+      - db
+    ports:
+      - '5555:80'
+    environment:
+      PGADMIN_DEFAULT_EMAIL: mobsysuser22@pgadmin.org
+      PGADMIN_DEFAULT_PASSWORD: GhtVjG4_0w_xQo+fHvo^47
+    volumes:
+      - pgadmin-data:/var/lib/pgadmin
+    restart: unless-stopped
 
   web:
     image: mobsys-frontend
