--- a/backend/package.json
+++ b/backend/package.json
@@ -27,9 +27,11 @@
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/schedule": "^2.1.0",
     "@nestjs/swagger": "^6.1.3",
     "@prisma/client": "^4.6.1",
     "argon2": "^0.30.1",
+    "axios": "^1.2.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "passport": "^0.6.0",
