--- a/web/package.json
+++ b/web/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^4.16.1",
+    "classnames": "^2.3.2",
     "next": "^13",
     "next-pwa": "^5.6.0",
     "react": "^18.2.0",
