--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -20,8 +20,6 @@ services:
       DATABASE_URL: $DATABASE_URL
   db:
     image: postgres
-    container_name: postgres
-    hostname: postgres
     ports:
       - 5432:5432
     restart: unless-stopped
@@ -32,13 +30,24 @@ services:
       POSTGRES_PASSWORD: $POSTGRES_PASSWORD
     volumes:
       - postgres-data:/var/lib/postgresql/data
+  prisma_studio:
+    image: node:latest
+    depends_on:
+      - db
+    working_dir: /app
+    volumes:
+      - .:/app
+    ports:
+      - 5555:5555
+    command: npx prisma studio
+
   pgadmin:
     image: dpage/pgadmin4
     container_name: pgadmin
     depends_on:
       - db
     ports:
-      - '5555:5555'
+      - '5557:80'
     environment:
       PGADMIN_DEFAULT_EMAIL: mobsysuser22@pgadmin.org
       PGADMIN_DEFAULT_PASSWORD: GhtVjG4_0w_xQo+fHvo^47
