--- a/web/package.json
+++ b/web/package.json
@@ -14,7 +14,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
-    "react-minimal-pie-chart": "^8.4.0"
+    "react-minimal-pie-chart": "^8.4.0",
+    "react-spinners": "^0.13.7"
   },
   "devDependencies": {
     "@types/node": "^18.11.3",
