--- a/web/package.json
+++ b/web/package.json
@@ -7,7 +7,10 @@
     "cypress": "cypress open"
   },
   "dependencies": {
+    "@tanstack/query-sync-storage-persister": "^4.22.0",
     "@tanstack/react-query": "^4.16.1",
+    "@tanstack/react-query-devtools": "^4.22.0",
+    "@tanstack/react-query-persist-client": "^4.22.0",
     "classnames": "^2.3.2",
     "next": "^13",
     "next-pwa": "^5.6.0",
